# gridium-scraper

./: README.md  pyproject.toml  requirements.txt
gridium/: scraper.py
